--- a/src/components/TopBarBox/index.less
+++ b/src/components/TopBarBox/index.less
@@ -25,7 +25,7 @@
     li {
         width: 25%;
         margin: 0.06rem 0;
-        a {
+        span {
             display: block;
             width: 0.8rem;
             text-align: center;
